--- a/src/main/webapp/css/toast.css
+++ b/src/main/webapp/css/toast.css
@@ -1,3 +1,13 @@
+/*******************************************************************************
+* Copyright (c) 2024 IBM Corporation and others.
+* All rights reserved. This program and the accompanying materials
+* are made available under the terms of the Eclipse Public License v2.0
+* which accompanies this distribution, and is available at
+* http://www.eclipse.org/legal/epl-v20.html
+*
+* Contributors:
+*     IBM Corporation - initial API and implementation
+*******************************************************************************/
 #toast {
     visibility: hidden;
 	background-image: radial-gradient(circle, #222 85%, #7c0000);
